--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <a href="Ejercicios_JuanAntonio\form_ex_1.html">Juan Antonio1</a>
     <a href="Ejercicios_JuanAntonio\form_ex_3.html">Juan Antonio2</a>
+
+    <a href="Ejercicios_Sergio\form_ex_1.html">Sergio</a>
+    <a href="Ejercicios_Sergio\form_ex_3.html">Sergio</a>
 </body>
 </html>
